<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UI.NavScreen">

    <!-- android:numColumns=2 is the number of columns for Grid View
         android:horizontalSpacing is the space between horizontal
         grid items.-->


    <com.synnapps.carouselview.CarouselView
        android:id="@+id/customCarouselView"
        android:layout_width="match_parent"
        android:layout_height="191dp"
        app:disableAutoPlayOnUserInteraction="true"
        app:fillColor="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/scoreHeadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp" >

    </com.synnapps.carouselview.CarouselView>

    <TextView
        android:id="@+id/scoreHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="20dp"
        android:text="@string/categories"
        android:textSize="15.5sp"
        app:layout_constraintBottom_toTopOf="@+id/navGrid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/navGrid"
        android:layout_width="match_parent"
        android:layout_height="436dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/localCard"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:srcCompat="@drawable/local" />

            <TextView
                android:id="@+id/navText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_light"
                android:text="@string/local_news"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/techCard"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:layout_marginStart="185dp"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/techView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:srcCompat="@drawable/tech" />

            <TextView
                android:id="@+id/techText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_light"
                android:text="@string/tech_news"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/worldCard"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="135dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/worldView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:srcCompat="@drawable/world" />

            <TextView
                android:id="@+id/worldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_light"
                android:text="@string/world_news"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sportsCard"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:layout_marginStart="185dp"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="135dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/sportsView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:srcCompat="@drawable/sports" />

            <TextView
                android:id="@+id/sportsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_light"
                android:text="@string/sports_news"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/healthCard"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="270dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/healthView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:srcCompat="@drawable/health" />

            <TextView
                android:id="@+id/healthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_light"
                android:text="@string/health"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/businessCard"
            android:layout_width="170dp"
            android:layout_height="120dp"
            android:layout_marginStart="185dp"
            android:layout_marginLeft="185dp"
            android:layout_marginTop="270dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <ImageView
                android:id="@+id/businessView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                app:srcCompat="@drawable/business" />

            <TextView
                android:id="@+id/businessText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:fontFamily="@font/roboto_light"
                android:text="@string/business"
                android:textAlignment="center"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>